添加了boss栏的倒计时